<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_logo_user" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Login"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Email"
                android:visibility="invisible"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAccountInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:background="@color/Background_Light"
                android:drawableStart="@drawable/ic_account_info"
                android:text="@string/account_info" />

            <Button
                android:id="@+id/btnNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:background="@color/Background_Light"
                android:drawableStart="@drawable/ic_notification"
                android:text="@string/nofitication" />

            <Button
                android:id="@+id/btnSleepHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:background="@color/Background_Light"
                android:drawableStart="@drawable/icon_sleeping"
                android:text="Sleep History" />

            <Button
                android:id="@+id/btnTodoList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:background="@color/Background_Light"
                android:drawableStart="@drawable/ic_todo_list"
                android:text="@string/to_do_list" />

            <Button
                android:id="@+id/btnSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:background="@color/Background_Light"
                android:drawableStart="@drawable/ic_sound"
                android:text="@string/sound" />

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:background="@color/Background_Light"
                android:drawableStart="@drawable/ic_setting"
                android:text="@string/setting" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>